background image added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alphabet Clash</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
-<body>
-    
+
+<body class="font-poppins">
+    <main class="min-h-screen bg-[#010313] bg-[url(Image/background.png)] bg-no-repeat bg-center">
+        <section class="home min-h-screen text-white flex flex-col items-center justify-center">
+            <div class="flex flex-col items-center gap-8">
+                <h class="text-8xl text-center font-anton uppercase">Alpha Clash Pro</h>
+                <p>Unleash Your Keyboard Kun g Fu : Press "Enter" to Play</p>
+                <button class="btn">Play Now</button>
+            </div>
+        </section>
+        <section class="play-ground"></section>
+        <section class="score"></section>
+    </main>
 </body>
+
 </html>
